--- a/app/views/instructors/edit.html.erb
+++ b/app/views/instructors/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Instructors#edit</h1>
-<p>Find me in app/views/instructors/edit.html.erb</p>
+<h1>Edit Instructor</h1>
+<%= render :partial =>'form' %>
