--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Instructors#index</h1>
-<p>Find me in app/views/instructors/index.html.erb</p>
+<%if @current_user.present? && @current_user.user_type == 'Admin'%>
+<%= link_to 'New Instructor',new_instructor_path %>
+<%end%>
+
+<h1>Instructors</h1>
+<% @instructors.each do |instructor| %>
+<%= image_tag instructor.photo, :alt =>instructor.name, :class =>'thumb'%>
+
+<ul>
+  <li><%= link_to instructor.name, instructor %> has <%= pluralize(instructor.likes,'like')%></li>
+  <li><%= instructor.qualification %></li>
+  <li><%= instructor.instrument %></li>
+  <li><%= instructor.description %></li>
+</ul>
+<% end %>
