--- a/app/views/instructors/new.html.erb
+++ b/app/views/instructors/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Instructors#new</h1>
-<p>Find me in app/views/instructors/new.html.erb</p>
+<h1>New Instructor</h1>
+<%= render :partial => 'form' %>
