--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Instructors#show</h1>
-<p>Find me in app/views/instructors/show.html.erb</p>
+
+<h1><%=@instructor.name%></h1>
+<%= image_tag @instructor.photo, :alt =>@instructor.name, :class =>'feature'%>
+<p><%=@instructor.name%> has <%= pluralize(@instructor.likes,'like')%></p>
+
+<ul>
+
+<li><%= @instructor.qualification%></li>
+<li><%= @instructor.instrument %></li>
+<li><%= @instructor.description %></li>
+</ul>
+
+<%if @current_user.present? && @current_user.user_type == 'Admin'%>
+<div class = "controls">
+  <%= link_to 'Edit Instructor', edit_instructor_path(@instructor)%>
+<%= link_to 'Delete Instructor', @instructor, :method => 'delete', :data =>{:confirm =>'Are you sure?'}%>
+</div>
+<% end %>
