--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -5,9 +5,9 @@
 
 <ul>
 
-<li><%= @instructor.qualification%></li>
-<li><%= @instructor.instrument %></li>
-<li><%= @instructor.description %></li>
+<li><u>Degree held:</u> <%= @instructor.qualification%></li>
+<li>Instrument taught: <%= @instructor.instrument %></li>
+<li>About: <%= @instructor.description %></li>
 </ul>
 
 <%if @current_user.present? && @current_user.user_type == 'Admin'%>
