--- a/app/views/performances/new.html.erb
+++ b/app/views/performances/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Performances#new</h1>
-<p>Find me in app/views/performances/new.html.erb</p>
+<h1>New Performance</h1>
+<%= render :partial => 'form'%>
