--- a/app/views/performances/show.html.erb
+++ b/app/views/performances/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Performances#show</h1>
-<p>Find me in app/views/performances/show.html.erb</p>
+<h1><%= @performance.student.name%></h1>
+<ul>
+  <li><%= @performance.name %></li>
+  <%= image_tag @performance.media,:alt =>@performance.description, :class =>'feature' %>
+  <!-- <li><%= video_tag @performance.media,:alt =>@performance.description, :class =>'feature' %></li> -->
+
+  <% if @performance.performance_date.present?%>
+  <li><%= @performance.performance_date.strftime '%d/%m/%Y' unless @performance.performance_date.nil? %></li>
+  <%end%>
+<li><%= @performance.description %></li>
+
+</ul>
+<%if @current_user.present? && @current_user.user_type == 'Admin'%>
+<div class="controls">
+  <%= link_to 'Edit Performance', edit_performance_path(@performance)%>
+<%= link_to 'Delete Performance', @performance, :method => 'delete', :data =>{:confirm =>'Are you sure?'}%>
+</div>
+<% end %>
