--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Students#index</h1>
-<p>Find me in app/views/students/index.html.erb</p>
+<h1>Students</h1>
+<p><%= link_to 'New Student',new_student_path%></p>
+
+<%if @current_user.present? && @current_user.user_type == 'Admin'%>
+<ul>
+  <% @students.each do |student| %>
+  <li><%= link_to student.name, student %></li>
+  <% end %>
+</ul>
+<% else %>
+<ul>
+  <% @students_user.each do |student| %>
+  <li><%= link_to student.name, student %></li>
+  <% end %>
+</ul>
+
+<%end%>
+
+
+<!-- <ul>
+
+<% @students.each do |student| %>
+<p><li> <%= link_to student.name, student %></li>
+<li><%= student.phone %></li>
+<% if student.dob.present? %>
+<li><%= student.dob.strftime '%d/%m/%Y' %></li>
+<% end %>
+<% end %>
+</ul></p> -->
