--- a/app/views/performances/show.html.erb
+++ b/app/views/performances/show.html.erb
@@ -1,3 +1,8 @@
+<%if @current_user.nil?%>
+<h2>Please Sign in to proceed!</h2>
+
+<% elsif @current_user.present?%>
+
 <h1><%= @performance.student.name%></h1>
 <ul>
   <li><%= @performance.name %></li>
@@ -15,4 +20,5 @@
   <%= link_to 'Edit Performance', edit_performance_path(@performance)%>
 <%= link_to 'Delete Performance', @performance, :method => 'delete', :data =>{:confirm =>'Are you sure?'}%>
 </div>
+<% end %>
 <% end %>
