--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,9 +1,28 @@
-<h1>Log in</h1>
-<h2><%= flash[:error] %></h2>
-<%= form_tag login_path do %>
-<%= label_tag :email %>
-<%= email_field_tag :email %>
-<%= label_tag :password %>
-<%= password_field_tag :password %>
-<%= submit_tag "Log in" %>
-<% end %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+  <div id="login1">
+
+    <h1>Log in</h1>
+
+    <div><h2><%= flash[:error] %></h2></div>
+    <%= form_tag login_path do %>
+    <div><%= label_tag  :email %>
+     <%= email_field_tag :email %></div>
+    <div><%= label_tag  :password %>
+    <%= password_field_tag :password %></div>
+    <p></p>
+    <p></p>
+
+    <div class = "submit"><%= submit_tag "Log in" %></div>
+    <% end %>
+  </div>
+
+
+
+  </body>
+</html>
