--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,20 +1,27 @@
 <h1>Students</h1>
-<p><%= link_to 'New Student',new_student_path%></p>
+<%if @current_user.nil?%>
+<h2>Please Sign in to proceed!</h2>
 
-<%if @current_user.present? && @current_user.user_type == 'Admin'%>
-<ul>
-  <% @students.each do |student| %>
-  <li><%= link_to student.name, student %></li>
-  <% end %>
-</ul>
-<% else %>
-<ul>
-  <% @students_user.each do |student| %>
-  <li><%= link_to student.name, student %></li>
-  <% end %>
-</ul>
+<% elsif @current_user.present?%>
+  <p><%= link_to 'New Student',new_student_path%></p>
+
+    <%if @current_user.present? && @current_user.user_type == 'Admin'%>
+    <ul>
+      <% @students.each do |student| %>
+      <li><%= link_to student.name, student %></li>
+      <% end %>
+    </ul>
+    <% else %>
+    <ul>
+      <% @students_user.each do |student| %>
+      <li><%= link_to student.name, student %></li>
+      <% end %>
+    </ul>
+
+    <%end%>
 
 <%end%>
+
 
 
 <!-- <ul>
