--- a/app/assets/stylesheets/music.css
+++ b/app/assets/stylesheets/music.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Heebo');
 
  .thumb
  {
@@ -7,9 +8,13 @@
  {
    max-width:100%;
  }
-
+ .signup
+ {
+   padding:4px;
+ }
  body
  {
+  font-family: 'Heebo', sans-serif;
   background-color:#ffffff;
   margin: 0;
   padding: 0;
@@ -75,7 +80,6 @@ footer
  {
    border:2px solid white;
    width:50%;
-
    padding:30px;
    font-size:20px;
    margin:0 auto;
@@ -88,12 +92,29 @@ label
   display: inline-block;
 }
 
-.submit
+.submit input
 {
-  text-align:center;
+  /* text-align:center; */
   font-size:20px;
+  padding: 0.2em;
+  border: 1px solid black;
+  align: center;
+}
+.top_bar
+{
+  align:right;
 }
 
+.sign{
+  text-align:right;
+}
+.sign a
+{
+  color:#000000;
+  padding: 1em;
+  font-size:20px;
+  text-decoration: none;
+}
 /* .display
 {
   padding:4px;
