--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,13 +1,22 @@
 
 <h1><%=@instructor.name%></h1>
 <%= image_tag @instructor.photo, :alt =>@instructor.name, :class =>'feature'%>
-<p><%=@instructor.name%> has <%= pluralize(@instructor.likes,'like')%></p>
-
+<!-- <p><%=@instructor.name%> has <%= pluralize(@instructor.likes,'like')%></p> -->
+<p><%=@instructor.name%> <%= pluralize(@instructor.likes.count, 'like') %>
+  <% if @current_user.present? %>
+    <% if @instructor.likes.where(:user_id => @current_user.id).count == 0 %>
+      <%=link_to '  like', instructor_like_path(@instructor.id), :method => 'post'%></p>
+    <% else %>
+      <%= link_to '  unlike', instructor_like_path(@instructor.id), :method => 'delete' %>
+    <% end %>
+  <% end %>
 <ul>
 
 <li><u>Degree held:</u> <%= @instructor.qualification%></li>
 <li>Instrument taught: <%= @instructor.instrument %></li>
 <li>About: <%= @instructor.description %></li>
+<li>Likes: <%= @likes %></li>
+
 </ul>
 
 <%if @current_user.present? && @current_user.user_type == 'Admin'%>
