--- a/app/views/instructors/_form.html.erb
+++ b/app/views/instructors/_form.html.erb
@@ -4,18 +4,33 @@
 <% elsif @current_user.present? && @current_user.user_type == 'Admin'%>
 
 <%= form_for @instructor do |f|%>
+<fieldset class = "form-group col-5">
 <%= f.label :name %>
-<%= f.text_field :name %>
+<%= f.text_field :name,:class => 'form-control' %>
+</fieldset>
+
+<fieldset class = "form-group col-5">
 <%= f.label :qualification %>
-<%= f.text_field :qualification %>
+<%= f.text_field :qualification,:class => 'form-control'  %>
+</fieldset>
+<fieldset class = "form-group col-5">
 <%= f.label :instrument %>
-<%= f.text_field :instrument %>
-<%= f.label :description %>
-<%= f.text_field :description %>
-<%= f.label :photo %>
-<%= f.url_field :photo %>
-<%= f.label :likes %>
-<%= f.number_field :likes %>
-<%= f.submit %>
+<%= f.text_field :instrument,:class => 'form-control'  %>
+</fieldset>
+<fieldset class = "form-group col-5">
+  <%= f.label :description %>
+  <%= f.text_area :description,:class => 'form-control'  %>
+</fieldset>
+<fieldset class = "form-group col-5">
+  <%= f.label :photo %>
+  <%= f.url_field :photo,:class => 'form-control'  %>
+</fieldset>
+<!-- <fieldset class = "form-group">
+  <%= f.label :likes %>
+  <%= f.number_field :likes ,:class => 'form-control' %>
+</fieldset> -->
+<fieldset class = "form-group">
+<label></label><%= f.submit %>
+</fieldset>
 <% end %>
 <% end %>
