--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
   <body>
 
     <div class="container">
-      <div class = "sign">
+      <!-- <%= image_tag "",:alt =>"logo"%> -->
+      <div class = "header">
+      <img class = "logo" src = "https://png.pngtree.com/element_origin_min_pic/17/08/12/20d865e2e5a49f4c1cbe8113bd2cdecc.jpg", alt = "logo">
+      <!--img src = "/Users/meena/projects/project1/app/assets/images/Melody.jpg"-->
+      <%= image_tag "Melody.jpg" %>
+      </div>
+      <div class = "text-right navigation">
         <% if @current_user.present? %>
         <%= link_to "Sign Out #{@current_user.name}",login_path, :method => 'delete'%>
         <% else %>
@@ -20,19 +26,21 @@
         <% end %>
       </div>
     <header>
-      <nav class="menu">
-        <%= link_to 'Instructors',instructors_path%>
-        <%= link_to 'Enroll', students_path %>
-        <!-- <%= link_to 'New Instructor',new_instructor_path %> -->
-        <%= link_to 'Performance',performances_path %>
-        <%=link_to 'Home',root_path  %>
-        <!-- <% if @current_user.present? %>
-        <%= link_to "Sign Out #{@current_user.name}",login_path, :method => 'delete'%>
-        <% else %>
-        <%= link_to 'Sign Up', new_user_path %>
-        <%= link_to 'Sign in',login_path %>
-        <% end %> -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <!-- <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a> -->
+            <%= link_to 'Home',root_path, :class => 'nav-item nav-link' %>
+            <%= link_to 'Instructors',instructors_path, :class => 'nav-item nav-link' %>
+            <%= link_to 'Enroll', students_path, :class => 'nav-item nav-link'%>
+            <%= link_to 'Performance',performances_path, :class => 'nav-item nav-link'%>
+          </div>
+        </div>
       </nav>
+
     </header>
     <main>
       <div class = "content">
@@ -40,9 +48,10 @@
       </div>
 
     </main>
+<p></p>
+<p></p>
 
-    <footer>Created by Meena</footer>
-
+    <footer class = "text-center footer">Created by Meena</footer>
     </div>
   </body>
 </html>
