--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,17 +2,66 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Music School</title>
+    <title>Melody Music School</title>
   </head>
   <body>
-      <%if @current_user.present?%>
-      <h2>Welcome back <%=@current_user.email%></h2>
-      
+
+
+      <!-- <%if @current_user.present?%>
+      <h3>Welcome back <%=@current_user.name%></h3>
+
+
+
       <% else %>
       <h2>Please Sign in to proceed!</h2>
 
-      <%end%>
-    </div>
+      <%end%> -->
+
+    <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="https://ccmcollege.com/wp-content/uploads/2016/11/slideshow-taglines-03-1170x450.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://ccmcollege.com/wp-content/uploads/2017/09/slideshow-AN-1170x450.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://ccmcollege.com/wp-content/uploads/2018/02/Slideshow-Alumni-Network-03-1170x450.jpg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <div class="container">
+      <p></p>
+        <div class="row text-center">
+          <div class="col">
+            <h3>MISSION</h3>
+                  Our mission is to educate musicians effectively, empowering them with the knowledge, skills, and confidence to express themselves dynamically through modern popular music.
+          </div>
+          <div class="col">
+            <h3>VISION</h3>
+                  Our vision is to create an inspiring, diverse, and inclusive higher education space in which students, faculty, and members of the community may gather together to study, create, perform, record, and share music.
+
+          </div>
+          <div class="col">
+            <h3>OBJECTIVES</h3>
+                  Teach - modern popular music in many instruments.
+                  Create - compose new music and remain non-judgemental toward the process and product of others.
+                  Perform - at select venues and connect with audiences.
+          </div>
+        </div>
+      </div>
+ -->
+
+
+
 
 
   </body>
