--- a/app/views/performances/_form.html.erb
+++ b/app/views/performances/_form.html.erb
@@ -4,16 +4,30 @@
 <% elsif @current_user.present?%>
 
 <%= form_for @performance do |f| %>
+<fieldset class = "form-group col-5">
+
 <%= f.label :student_id %>
 <%= f.select :student_id, Student.pluck(:name,:id)%>
+</fieldset>
+<fieldset class = "form-group col-5">
+
 <%= f.label :name %>
-<%= f.text_field :name %>
+<%= f.text_field :name,:class => 'form-control' %>
+</fieldset>
+<fieldset class = "form-group col-5">
 <%= f.label :description%>
-<%= f.text_field :description %>
+<%= f.text_area :description,:class => 'form-control' %>
+</fieldset>
+<fieldset class = "form-group col-5">
+
 <%= f.label :performance_date %>
-<%= f.text_field :performance_date %>
+<%= f.text_field :performance_date,:class => 'form-control' %>
+</fieldset>
+<fieldset class = "form-group col-5">
+
 <%= f.label :media %>
-<%= f.url_field :media %>
+<%= f.url_field :media,:class => 'form-control'  %>
+</fieldset>
 
 <%= f.submit %>
 <% end %>
