--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -2,21 +2,45 @@
 <h2>Please Sign in to proceed!</h2>
 
 <% elsif @current_user.present?%>
-<h1><%= @student.name %></h1>
-<ul>
-  <li><%= @student.user.name %> Family</li>
-  <li>Phone: <%= @student.phone %>
-</li>
-<% if @student.dob.present?%>
-  <li>Date of Birth: <%= @student.dob.strftime '%d/%m/%Y' unless @student.dob.nil? %></li>
-  <%end%>
-</li>
-</ul>
+<p></p>
+<p></p>
 
+    <h1><%= @student.name %></h1>
+    <div class="card" style="width: 18rem;">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><%= @student.user.name %> Family</li>
+        <li class="list-group-item">Phone: <%=number_to_phone @student.phone %>
+        <% if @student.dob.present?%>
+          <li  class="list-group-item">Date of Birth: <%= @student.dob.strftime '%d/%m/%Y' unless @student.dob.nil? %></li>
+          <%end%>
+        </li>
 
+      </ul>
+    </div>
+
+    <!-- <ul>
+      <li><%= @student.user.name %> Family</li>
+      <li>Phone: <%=number_to_phone @student.phone %>
+    </li>
+    <% if @student.dob.present?%>
+      <li>Date of Birth: <%= @student.dob.strftime '%d/%m/%Y' unless @student.dob.nil? %></li>
+      <%end%>
+    </li>
+    </ul>
+    </div>
+
+   -->
+
+<p></p>
+<p></p>
 <div class="controls">
-  <%= link_to 'Edit Student', edit_student_path(@student)%>
-<%= link_to 'Delete Student', @student, :method => 'delete', :data =>{:confirm =>'Are you sure?'}%>
+  <a class="badge badge-warning"  <%= link_to 'Edit Student', edit_student_path(@student)%>
+</a>
+
+<a class="badge badge-warning" <%= link_to 'Delete Student', @student, :method => 'delete', :data =>{:confirm =>'Are you sure?'}%>
+</a>
+<!-- <%= link_to 'Edit Student', edit_student_path(@student)%>
+<%= link_to 'Delete Student', @student, :method => 'delete', :data =>{:confirm =>'Are you sure?'}%> -->
 </div>
 
 <% end %>
