--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,20 +6,30 @@
   <% end %>
 </ol>
 <% end %>
-<div id="login1">
+<div>
   <%= form_for @user do |f| %>
-  <div class = "signup"><%= f.label :name %>
-  <%= f.text_field :name  %></div>
-  <div class = "signup"><%= f.label :phone %>
-  <%= f.text_field :phone%></div>
-  <div class = "signup"><%= f.label :email %>
-  <%= f.email_field :email %></div>
-  <div class = "signup"><%= f.label :password %>
-  <%= f.password_field :password %></div>
-  <div class = "signup"><%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation%></div>
+  <fieldset class = "form-group col-5">
+    <div><%= f.label :name %>
+    <%= f.text_field :name,:required=>true,:class => 'form-control'%></div>
+  </fieldset>
+  <fieldset class = "form-group col-5">
+    <div><%= f.label :phone %>
+    <%= f.text_field :phone,:required=>true,:class => 'form-control' %></div>
+  </fieldset>
+  <fieldset class = "form-group col-5">
+    <div><%= f.label :email %>
+    <%= f.email_field :email ,:required=>true,:class => 'form-control' %></div>
+  </fieldset>
+  <fieldset class = "form-group col-5">
+    <div><%= f.label :password %>
+    <%= f.password_field :password,:required=>true, :class => 'form-control' %></div></fieldset>
+  <fieldset class = "form-group col-5">
+    <div><%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation,:required=>true,:class => 'form-control' %></div>
+  </fieldset>
   <%= f.hidden_field( :user_type, {:value=>'Parent'}) %>
-  <div class = "submit"><%= f.submit "Sign Up!" %></div>
+  <fieldset class = "form-group">
+  <div><label></label><%= f.submit "Sign Up!" %></div></fieldset>
   <% end %>
 
 
