like awesome font

--- a/app/views/instructors/_form.html.erb
+++ b/app/views/instructors/_form.html.erb
@@ -30,7 +30,7 @@
   <%= f.number_field :likes ,:class => 'form-control' %>
 </fieldset> -->
 <fieldset class = "form-group">
-<label></label><%= f.submit %>
+<label></label><%= f.submit "Create New Instructor"%>
 </fieldset>
 <% end %>
 <% end %>
