--- a/app/views/performances/show.html.erb
+++ b/app/views/performances/show.html.erb
@@ -4,21 +4,44 @@
 <% elsif @current_user.present?%>
 
 <h1><%= @performance.student.name%></h1>
-<ul>
+<div class="card" style="width: 70rem;">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Performance: <%= @performance.name %></li>
+    <li class="list-group-item">Media: <%== @performance.media %></li>
+
+      <% if @performance.performance_date.present?%>
+      <li class="list-group-item">Performance Date:
+
+      <%= @performance.performance_date.strftime '%d/%m/%Y' unless @performance.performance_date.nil? %></li>
+      <%end%>
+      </li>
+      <li class="list-group-item">Description: <%== @performance.description %></li>
+
+  </ul>
+</div>
+
+<p></p>
+<p></p>
+
+<!-- <ul>
   <li><%= @performance.name %></li>
-  <%= image_tag @performance.media,:alt =>@performance.description, :class =>'feature' %>
-  <!-- <li><%= video_tag @performance.media,:alt =>@performance.description, :class =>'feature' %></li> -->
+  <%#= image_tag @performance.media,:alt =>@performance.description, :class =>'feature' %>
+  <%== @performance.media %>
 
   <% if @performance.performance_date.present?%>
   <li><%= @performance.performance_date.strftime '%d/%m/%Y' unless @performance.performance_date.nil? %></li>
   <%end%>
 <li><%= @performance.description %></li>
 
-</ul>
+</ul> -->
 <%if @current_user.present? && @current_user.user_type == 'Admin'%>
 <div class="controls">
-  <%= link_to 'Edit Performance', edit_performance_path(@performance)%>
-<%= link_to 'Delete Performance', @performance, :method => 'delete', :data =>{:confirm =>'Are you sure?'}%>
+  <%= link_to 'Edit Performance', edit_performance_path(@performance),:class => 'badge badge-warning'%>
+<%= link_to 'Delete Performance', @performance, :method => 'delete', :data =>{:confirm =>'Are you sure?'},:class => 'badge badge-warning'%>
+
+
+
+
 </div>
 <% end %>
 <% end %>
