--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class = "header">
       <img class = "logo" src = "https://png.pngtree.com/element_origin_min_pic/17/08/12/20d865e2e5a49f4c1cbe8113bd2cdecc.jpg", alt = "logo">
       <!--img src = "/Users/meena/projects/project1/app/assets/images/Melody.jpg"-->
-      <%= image_tag "Melody.jpg" %>
+      <%= image_tag "Melody6.jpg" %>
       </div>
       <div class = "text-right navigation">
         <% if @current_user.present? %>
@@ -51,7 +51,7 @@
 <p></p>
 <p></p>
 
-    <footer class = "text-center footer">Created by Meena</footer>
+    <footer class = "text-center footer">Created by Meena- WDI Student</footer>
     </div>
   </body>
 </html>
