--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,10 +14,9 @@
 
       <% else %>
       <h2>Please Sign in to proceed!</h2>
-
       <%end%> -->
 
-    <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="https://ccmcollege.com/wp-content/uploads/2016/11/slideshow-taglines-03-1170x450.jpg" alt="First slide">
@@ -58,7 +57,7 @@
           </div>
         </div>
       </div>
- -->
+
 
 
 
