--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,7 +3,7 @@
 <h2>Please Sign in to proceed!</h2>
 
 <% elsif @current_user.present?%>
-<div class="row text-center">
+<div class="row center">
     <div class="col-sm">
     </div>
     <div class="col-sm">
@@ -12,7 +12,7 @@
     <div class="col-sm">
     </div>
 </div>
-<div class="row text-center">
+<div class="row center">
      <div class="col-sm">
      </div>
      <div class="col-sm">
@@ -22,7 +22,7 @@
      <div class="col-sm">
      </div>
 </div>
-<div class="row">
+<div class="row center">
      <div class="col-sm">
      </div>
      <div class="col-sm">
