--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -1,22 +1,22 @@
 
-<div class="row">
-  <div class="col-sm">
-  </div>
-  <div class="col-sm">
-    <h1>Instructors</h1>
-  </div>
-  <div class="col-sm">
-  </div>
+<div class="row center">
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">
+      <h1>Instructors</h1>
+    </div>
+    <div class="col-sm">
+    </div>
 </div>
 
 <div class="row">
-  <div class="col-sm">
-  </div>
-  <div class="col-sm">
-    <%= link_to 'New Instructor',new_instructor_path, :class => 'badge badge-warning'%>
-  </div>
-  <div class="col-sm">
-  </div>
+    <div class="col-sm">
+    </div>
+    <div class="col-sm">
+      <%= link_to 'New Instructor',new_instructor_path, :class => 'badge badge-warning'%>
+    </div>
+    <div class="col-sm">
+    </div>
 </div>
 
 <%if @current_user.present? && @current_user.user_type == 'Admin'%>
@@ -26,10 +26,9 @@
 <div class="row">
   <% @instructors.each do |instructor| %>
     <div class="col-sm-3">
-      <div class="profile_thumb" style="background-image: url(<%= asset_path instructor.photo %>)"></div>
-      <%#= image_tag instructor.photo, :alt =>instructor.name, :class =>'thumb' if instructor.photo.present? %>
-      <p><%= link_to instructor.name, instructor %>: <%= instructor.instrument %></p>
-    <!-- <li>Instrument taught: <%= instructor.instrument %></li> -->
+        <div class="profile_thumb image_transform" style="background-image: url(<%= instructor.photo %>)"></div>
+        <%#= image_tag instructor.photo, :alt =>instructor.name, :class =>'thumb' if instructor.photo.present? %>
+        <p><%= link_to instructor.name, instructor %>: <%= instructor.instrument %></p>
     </div>
   <% end %>
 </div>
@@ -48,7 +47,6 @@
 <% @instructors.each do |instructor| %>
 
 
-<%= image_tag instructor.photo, :alt =>instructor.name, :class =>'thumb' if instructor.photo.present? %>
 <ul>
   <li><%= link_to instructor.name, instructor %></li>
   <li>Instrument taught: <%= instructor.instrument %></li>
