--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,8 +1,6 @@
 
-<h1><%=@instructor.name%></h1>
-<%= image_tag @instructor.photo, :alt =>@instructor.name, :class =>'feature'%>
-<!-- <p><%=@instructor.name%> has <%= pluralize(@instructor.likes,'like')%></p> -->
-<!-- <p><%=@instructor.name%> <%= pluralize(@instructor.likes.count, 'like') %> -->
+<h1><%= @instructor.name %></h1>
+<%= image_tag(@instructor.photo) if @instructor.photo.present? %>
 <p><%= pluralize(@instructor.likes.count, 'like') %>
 <!-- <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsl65K_7t1w9rT2Giezkv7A4MVfO00PuhNyRwZt7gdDylHWVsK"> -->
   <% if @current_user.present? %>
@@ -14,33 +12,19 @@
       <%= link_to '  unlike', instructor_like_path(@instructor.id), :method => 'delete' %>
     <% end %>
   <% end %>
-<div>
 
+<div>
   <div class="card" style="width: 70rem;">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">Degree held: <%= @instructor.qualification%></li>
       <li class="list-group-item">Instrument taught: <%= @instructor.instrument %></li>
       <li class="list-group-item">About: <%= @instructor.description %></li>
-
     </ul>
   </div>
 
-
-<ul>
-
-<!-- <li>Degree held: <%= @instructor.qualification%></li>
-<li>Instrument taught: <%= @instructor.instrument %></li>
-<li>About: <%= @instructor.description %></li> -->
-<!-- <li>Likes: <%= @likes %></li> -->
-
-</ul>
-
 <%if @current_user.present? && @current_user.user_type == 'Admin'%>
-<div class = "controls">
-  <%= link_to 'Edit Instructor', edit_instructor_path(@instructor),:class => 'badge badge-warning'%>
-  <%= link_to 'Delete Instructor', @instructor, :method => 'delete', :data =>{:confirm =>'Are you sure?'},:class => 'badge badge-warning'%>
-
-  <!-- <%= link_to 'Edit Instructor', edit_instructor_path(@instructor)%>
-<%= link_to 'Delete Instructor', @instructor, :method => 'delete', :data =>{:confirm =>'Are you sure?'}%> -->
-</div>
+  <div class = "controls">
+      <%= link_to 'Edit Instructor', edit_instructor_path(@instructor),:class => 'badge badge-warning'%>
+      <%= link_to 'Delete Instructor', @instructor, :method => 'delete', :data =>{:confirm =>'Are you sure?'},:class => 'badge badge-warning'%>
+  </div>
 <% end %>
