--- a/app/views/performances/index.html.erb
+++ b/app/views/performances/index.html.erb
@@ -6,7 +6,7 @@
 <h2>Please Sign in to proceed!</h2>
 
 <% elsif @current_user.present?%>
-<div class="row">
+<div class="row center">
     <div class="col-sm">
     </div>
     <div class="col-sm">
@@ -20,7 +20,7 @@
 
 
 <%if @current_user.present? && @current_user.user_type == 'Admin'%>
-<div class="row">
+<div class="row center">
     <div class="col-sm">
     </div>
     <div class="col-sm">
@@ -34,7 +34,7 @@
 <p></p>
 <ul>
 
-  <div class="row">
+  <div class="row center">
       <div class="col-sm">
       </div>
       <div class="col-sm">
@@ -46,6 +46,7 @@
                     <% end %>
                 </ul>
           </div>
+        </div>
 
 
            <% else %>
@@ -53,12 +54,11 @@
                  <ul class="list-group list-group-flush">
                  <% @performances_student.each do |performance| %>
 
-                 <li class="list-group-item"><%= link_to performance.student.name, performance.student %></li>
+                   <li class="list-group-item"><%= link_to performance.student.name, performance.student %></li>
                   <% end %>
-            </ul><p></p>
+                  </ul><p></p>
           </div>
+          <% end %>
           <div class="col-sm">
           </div>
-  </div>
-            <%end%>
-            <%end %>
+<%end %>
