--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
             <%= link_to 'Home',root_path, :class => 'nav-item nav-link' %>
             <%= link_to 'Instructors',instructors_path, :class => 'nav-item nav-link' %>
             <%= link_to 'Enroll', students_path, :class => 'nav-item nav-link'%>
-            <%= link_to 'Performance',performances_path, :class => 'nav-item nav-link'%>
+            <%= link_to 'Performances',performances_path, :class => 'nav-item nav-link'%>
           </div>
         </div>
       </nav>
