--- a/app/views/performances/index.html.erb
+++ b/app/views/performances/index.html.erb
@@ -3,7 +3,7 @@
 
 <%if @current_user.nil?%>
 <p></p><p></p>
-<h2>Please Sign in to proceed!</h2>
+<h4>Please Sign in to access this feature.</h4>
 
 <% elsif @current_user.present?%>
 <div class="row center">
