--- a/app/views/performances/_form.html.erb
+++ b/app/views/performances/_form.html.erb
@@ -11,17 +11,17 @@
 
 <fieldset class = "form-group col-5">
   <%= f.label :name %>
-  <%= f.text_field :name,:class => 'form-control' %>
+  <%= f.text_field :name,:class => 'form-control',:required =>true %>
 </fieldset>
 
 <fieldset class = "form-group col-5">
   <%= f.label :description%>
-  <%= f.text_area :description,:class => 'form-control' %>
+  <%= f.text_area :description,:class => 'form-control',:required =>true %>
 </fieldset>
 
 <fieldset class = "form-group col-5">
   <%= f.label :performance_date %>
-  <%= f.text_field :performance_date,:class => 'form-control' %>
+  <%= f.text_field :performance_date,:class => 'form-control'%>
 </fieldset>
 
 <fieldset class = "form-group col-5">
